--- a/minzheng/website/flask-app/templates/index.html
+++ b/minzheng/website/flask-app/templates/index.html
@@ -35,39 +35,12 @@
 <body>
     <div class="container">
         <h1>Machine Learning Pipeline</h1>
-        <form onsubmit="triggerTraining(); return false;">
-            <input type="submit" class="button" value="Run Training Pipeline">
+        <form action="training/01_1.html" method="get">
+            <input type="submit" class="button" value="Training Pipeline">
         </form>
         <form action="inference/02_1.html" method="get">
-            <input type="submit" class="button" value="Run Inference Pipeline">
+            <input type="submit" class="button" value="Inference Pipeline">
         </form>
     </div>
-
-    <script>
-        function triggerTraining() {
-            fetch('/process', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify({
-                    message: 'run_training_pipeline',
-                    payload: 100
-                })
-            })
-            .then(response => response.json())
-            .then(data => {
-                // Check if the training pipeline was triggered successfully
-                if (data.success) {
-                    // Redirect to the training page
-                    window.location.href = 'training/01_1.html';
-                } else {
-                    // Handle error (you can show a message or take other actions)
-                    console.error('Training pipeline failed:', data.error);
-                }
-            })
-            .catch(error => console.error('Error:', error));
-        }
-    </script>
 </body>
 </html>
