removed dummy, fixed flask site to now work on deployment

--- a/minzheng/website/flask-app/templates/index.html
+++ b/minzheng/website/flask-app/templates/index.html
@@ -35,10 +35,10 @@
 <body>
     <div class="container">
         <h1>Machine Learning Pipeline</h1>
-        <form action="training/01_1.html" method="get">
+        <form action="/training_page" method="get">
             <input type="submit" class="button" value="Training Pipeline">
         </form>
-        <form action="inference/02_1.html" method="get">
+        <form action="/inference_page" method="get">
             <input type="submit" class="button" value="Inference Pipeline">
         </form>
     </div>
