--- a/minzheng/website/flask-app/templates/inference/02_1.html
+++ b/minzheng/website/flask-app/templates/inference/02_1.html
@@ -200,7 +200,7 @@
                 sessionStorage.setItem('inferenceResults', JSON.stringify(data));
 
                 // Navigate to the results page
-                window.location.href = '02_2.html'; // Assuming the results page is at /results
+                window.location.href = '/inference_page_2'; 
             })
             .catch(error => {
                 console.error('Error:', error);
