--- a/minzheng/website/flask-app/templates/inference/02_1.html
+++ b/minzheng/website/flask-app/templates/inference/02_1.html
@@ -127,6 +127,7 @@
         </form>
     </div>
 
+    <div id="response-container"></div>
     <!-- Popup and Overlay -->
     <div class="popup-overlay" id="popup-overlay"></div>
     <div class="popup" id="popup">
@@ -194,13 +195,24 @@
                 method: 'POST',
                 body: formData,
             })
+            .catch(error => {
+                console.error('Error:', error);
+                alert('There was problem sending uploaded image for conversion');
+            })
             .then(response => response.json())
+            .catch(error => {
+                console.error('Error:', error);
+                alert('There was problem recieving response');
+            })
             .then(data => {
                 // Store the result in sessionStorage to pass to the results page
                 sessionStorage.setItem('inferenceResults', JSON.stringify(data));
+                
+                // Display the response
+                document.getElementById('response-container').textContent = JSON.stringify(data);
 
                 // Navigate to the results page
-                window.location.href = '/inference_page_2'; 
+                // window.location.href = '/inference_page_2'; 
             })
             .catch(error => {
                 console.error('Error:', error);
