integration environment experiment v4

--- a/minzheng/website/flask-app/templates/training/01_1.html
+++ b/minzheng/website/flask-app/templates/training/01_1.html
@@ -81,7 +81,15 @@
             .then(response => response.json())
             .then(data => {
             if (data) {
-                document.getElementById('result').innerText = JSON.stringify(data);
+                fetch('/results', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({
+                        payload: 100
+                    })
+                })
             }
         })
         .then(response => response.json())
